align fixed on navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -51,6 +51,7 @@ $icon-color: #95e1d3;
 
 
 .main-menu {
+  margin: 0;
   float: right;
   text-align: center;
   position: relative;
